--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <div class="container-sm">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">Landing template for startups</h1>
-	                        <p class="hero-paragraph">Our landing page template works on all devices, so you only have to set it up once, and get beautiful results forever.</p>
+	                        <h1 class="hero-title mt-0">EMPOWERING AND ENGAGING EVERY STUDENT</h1>
+	                        <p class="hero-paragraph">With the help of virtual reality</p>
 	                        <div class="hero-cta">
 								<a class="button button-primary button-wide-mobile" href="#">Get early access</a>
 							</div>
@@ -74,7 +74,7 @@
 									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-02.png" alt="iPhone Feature 02">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
+									<h3 class="mt-0 mb-16">Get a new glimpse of your world.</h3>
 									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
 								</div>
 							</div>
@@ -86,7 +86,7 @@
 									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-03.png" alt="iPhone Feature 03">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
+									<h3 class="mt-0 mb-16">Discover new horizons from your living room.</h3>
 									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
 								</div>
 							</div>
@@ -98,7 +98,7 @@
 									<img class="device-mockup is-revealing" src="dist/images/iphone-feature-04.png" alt="iPhone Feature 04">
 								</div>
 								<div class="feature-extended-body is-revealing">
-									<h3 class="mt-0 mb-16">Amazing features, coming soon.</h3>
+									<h3 class="mt-0 mb-16">Capture and relive experiences around the world.</h3>
 									<p class="m-0">Quam quisque id diam vel quam elementum pulvinar. Ut etiam sit amet nisl purus in mollis nunc. Odio morbi quis commodo odio aenean sed adipiscing diam donec.</p>
 								</div>
 							</div>
@@ -117,8 +117,8 @@
 					<div class="container-sm">
 						<div class="cta-inner section-inner">
 							<div class="cta-header text-center">
-								<h2 class="section-title mt-0">Stay in the know</h2>
-								<p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation.</p>
+								<h2 class="section-title mt-0">Who are we?</h2>
+								<p class="section-paragraph">Carmen Bouza · Yendy Fermín · Elizabeth Fondeur · Annemarie Gläesel · Víctor Reyes · Stephany Rondón</p>
 								<div class="cta-cta">
 									<a class="button button-primary button-wide-mobile" href="#">Get early access</a>
 								</div>
