--- a/index.html
+++ b/index.html
@@ -118,10 +118,7 @@
 						<div class="cta-inner section-inner">
 							<div class="cta-header text-center">
 								<h2 class="section-title mt-0">Who are we?</h2>
-								<p class="section-paragraph">Carmen Bouza · Yendy Fermín · Elizabeth Fondeur · Annemarie Gläesel · Víctor Reyes · Stephany Rondón</p>
-								<div class="cta-cta">
-									<a class="button button-primary button-wide-mobile" href="#">Get early access</a>
-								</div>
+								<p class="section-paragraph">Carmen Bouza · Yendy Fermín · Elizabeth Fondeur · Annemarie Gläsel · Víctor Reyes · Stephany Rondón</p>
 							</div>
 						</div>
 					</div>
