--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <div class="container-sm">
                     <div class="hero-inner">
 						<div class="hero-copy">
-	                        <h1 class="hero-title mt-0">EMPOWERING AND ENGAGING EVERY STUDENT</h1>
+	                        <h1 class="hero-title mt-0">PIM - EMPOWERING AND ENGAGING EVERY STUDENT</h1>
 	                        <p class="hero-paragraph">With the help of virtual reality</p>
 	                        <div class="hero-cta">
-								<a class="button button-primary button-wide-mobile" href="#">Get early access</a>
+								<a class="button button-primary button-wide-mobile" href="#">Try PIM now</a>
 							</div>
 						</div>
 						<div class="mockup-container">
