--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'UA-136109285-1');
+  gtag('config', 'UA-136109285-1', {'optimize_id':'GTM-THF5C8N'});
 </script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
