--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	                        <h1 class="hero-title mt-0">PIM - EMPOWERING AND ENGAGING EVERY STUDENT</h1>
 	                        <p class="hero-paragraph">With the help of virtual reality</p>
 	                        <div class="hero-cta">
-								<a class="button button-primary button-wide-mobile" href="#">Try PIM now</a>
+								<a class="button button-primary button-wide-mobile" href="gracias.html">Try PIM now</a>
 							</div>
 						</div>
 						<div class="mockup-container">
@@ -127,7 +127,7 @@
 						<div class="cta-inner section-inner">
 							<div class="cta-header text-center">
 								<h2 class="section-title mt-0">Who are we?</h2>
-								<p class="section-paragraph">Carmen Bouza · Yendy Fermín · Elizabeth Fondeur · Annemarie Gläsel · Víctor Reyes · Stephany Rondón</p>
+								<p class="section-paragraph">Bárbara Araque · Carmen Bouza · Yendy Fermín · Elizabeth Fondeur · Annemarie Gläsel · Víctor Reyes · Stephany Rondón</p>
 							</div>
 						</div>
 					</div>
