--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en" class="no-js">
 <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136109285-1"></script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KQRWS6C');</script>
+<!-- End Google Tag Manager -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136109285-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -13,12 +20,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Venus Template</title>
+    <title>PIM VR</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed has-animations">
+	
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KQRWS6C"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+	
     <div class="body-wrap boxed-container">
         <header class="site-header text-light">
             <div class="container">
@@ -127,7 +140,7 @@
 						<div class="cta-inner section-inner">
 							<div class="cta-header text-center">
 								<h2 class="section-title mt-0">Who are we?</h2>
-								<p class="section-paragraph">Bárbara Araque · Carmen Bouza · Yendy Fermín · Elizabeth Fondeur · Annemarie Gläsel · Víctor Reyes · Stephany Rondón</p>
+								<p class="section-paragraph">Bárbara Araque · Carmen Bouza · Yendy Fermín · Annemarie Gläsel · Víctor Reyes · Stephany Rondón</p>
 							</div>
 						</div>
 					</div>
@@ -181,7 +194,7 @@
 								</a>
 							</li>
 						</ul>
-						<div class="footer-copyright">&copy; 2018 Venus, all rights reserved</div>
+						<div class="footer-copyright">&copy; 2018 PIM VR, all rights reserved</div>
 					</div>
 				</div>
 			</div>
