--- a/index.html
+++ b/index.html
@@ -60,11 +60,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	                        <h1 class="hero-title mt-0">PIM - EMPOWERING AND ENGAGING EVERY STUDENT</h1>
 	                        <p class="hero-paragraph">With the help of virtual reality</p>
 	                        <div class="hero-cta">
-								<a class="button button-primary button-wide-mobile" href="gracias.html" type="ClickButton" onclick="console.log('sending analytics event');
-									ga('send', 'event', 'ClickButton', 'Click', 'About');
-								
-									event.stopPropagation();
-									event.preventDefault();">Try PIM now</a>
+								<a class="button button-primary button-wide-mobile" href="gracias.html">Try PIM now</a>
 							</div>
 						</div>
 						<div class="mockup-container">
