--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<div class="mockup-bg">
 								<img src="dist/images/iphone-hero-bg.svg" alt="iPhone illustration">
 							</div>
-							<img class="device-mockup" src="dist/images/iphone-hero.png" alt="iPhone Hero">
+							<a href="http://www.transparentpng.com//details/virtual-reality-transparent_8902.html" title="Image from transparentpng.com"><img src="http://www.transparentpng.com/download/virtual-reality/virtual-reality-transparent-3.png" width="350" alt="Virtual Reality Transparent"/>
+							</a>
 						</div>
                     </div>
                 </div>
