--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
 <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KQRWS6C');</script>
-<!-- End Google Tag Manager -->
-
 <!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136109285-1"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-136109285-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -21,18 +13,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PIM VR</title>
+    <title>Venus Template</title>
     <link href="https://fonts.googleapis.com/css?family=Heebo:400,700|Oxygen:700" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.5/dist/scrollreveal.min.js"></script>
 </head>
 <body class="is-boxed has-animations">
-	
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KQRWS6C"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-	
     <div class="body-wrap boxed-container">
         <header class="site-header text-light">
             <div class="container">
@@ -67,8 +53,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 							<div class="mockup-bg">
 								<img src="dist/images/iphone-hero-bg.svg" alt="iPhone illustration">
 							</div>
-							<a href="http://www.transparentpng.com//details/virtual-reality-transparent_8902.html" title="Image from transparentpng.com"><img src="http://www.transparentpng.com/download/virtual-reality/virtual-reality-transparent-3.png" width="350" alt="Virtual Reality Transparent"/>
-							</a>
+							<img class="device-mockup" src="dist/images/iphone-hero.png" alt="iPhone Hero">
 						</div>
                     </div>
                 </div>
@@ -142,7 +127,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 						<div class="cta-inner section-inner">
 							<div class="cta-header text-center">
 								<h2 class="section-title mt-0">Who are we?</h2>
-								<p class="section-paragraph">Bárbara Araque · Carmen Bouza · Yendy Fermín · Annemarie Gläsel · Víctor Reyes · Stephany Rondón</p>
+								<p class="section-paragraph">Bárbara Araque · Carmen Bouza · Yendy Fermín · Elizabeth Fondeur · Annemarie Gläsel · Víctor Reyes · Stephany Rondón</p>
 							</div>
 						</div>
 					</div>
@@ -196,7 +181,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 								</a>
 							</li>
 						</ul>
-						<div class="footer-copyright">&copy; 2018 PIM VR, all rights reserved</div>
+						<div class="footer-copyright">&copy; 2018 Venus, all rights reserved</div>
 					</div>
 				</div>
 			</div>
